--- a/index.html
+++ b/index.html
@@ -4,61 +4,115 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="icon" type="image/png" sizes="32x32" href="./src/images/favicon-32x32.png">
+  <link rel="stylesheet" href="./src/css/output.css">
   <title>Frontend Mentor | Room homepage</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body>
+<body class="">
+  <div id="drawer" class="z-50 flex items-center fixed top-0 right-0 h-0 w-screen bg-White overflow-x-hidden transition-all duration-300 px-6 text-regular ">
+    <div class="basis-2/6">
+      <button class="basis-2/6" id="close-drawer"><img src="./src/images/icon-close.svg" alt=""></button>
+    </div>
+      <a class="font-heading basis-1/6" href="#">Home</a>
+      <a class="basis-1/6" href="#">Shop</a>
+      <a class="basis-1/6" href="#">About</a>
+      <a class="basis-1/6" href="#">Contact</a>
+  </div>
+
+
+  <div class="relative bg-mobile-image-hero-1 w-screen h-[96vw] bg-contain bg-no-repeat ">
+    <!-- MenuBar -->
+    <div class="pl-6 pt-12 flex flex-row">
+      <button id="show-drawer" class="basis-1/3">
+        <img src="./src/images/icon-hamburger.svg" alt="">
+      </button>
+      <div class="basis-1/3">
+        <img class="mx-auto" src="./src/images/logo.svg" alt="logo">
+      </div>
+    </div>
+
+    <div class="bg-Black w-max absolute right-0 bottom-0">
+      <button class="bg-Black  py-3 px-6">
+        <img src="./src/images/icon-angle-left.svg" alt="">
+      </button>
+      <button class="bg-Black py-3 px-6">
+        <img src="./src/images/icon-angle-right.svg" alt="">
+      </button>
+    </div>
+
+  </div>
+  <div class="m-10">
+    <h1 class="mb-4">Discover innovative ways to decorate</h1>
+  
+    <p class="text-Dark-Gray">We provide unmatched quality, comfort, and style for property owners across the country. 
+    Our experts combine form and function in bringing your vision to life. Create a room in your 
+    own style with our collection and make your property a reflection of you and what you love.
+    </p>
+    <a class="flex items-center mt-8" href="#">
+      <p class="font-bold tracking-[8px] pr-6">SHOP NOW</p>
+      <img class="h-3" src="./src/images/icon-arrow.svg" alt="">
+    </a>
+
+  </div>
+  <div class="m-10 hidden">
+    <h1 class="mb-4">We are available all across the globe</h1>
+  
+    <p class="text-regular text-Dark-Gray">With stores all over the world, it's easy for you to find furniture for your home or place of business. Locally, we’re in most major cities throughout the country. Find the branch nearest you using our 
+    store locator. Any questions? Don't hesitate to contact us today.</p>
+  
+    <a class="flex items-center mt-8" href="#">
+      <p class="font-bold tracking-[8px] pr-6">SHOP NOW</p>
+      <img class="h-3" src="./src/images/icon-arrow.svg" alt="">
+    </a>
+  </div>
+  <div class="m-10 hidden">
+    <h1 class="mb-4">Manufactured with the best materials</h1>
+  
+    <p class="text-regular text-Dark-Gray">Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
+    to ensure that every product is made as perfect and as consistent as possible. With three decades of 
+    experience in this industry, we understand what customers want for their home and office.</p>
+  
+    <a class="flex items-center mt-8" href="#">
+      <p class="text-regular font-bold tracking-[8px] pr-6">SHOP NOW</p>
+      <img class="h-3" src="./src/images/icon-arrow.svg" alt="">
+    </a>
+  </div>
   <div>
-    <button><img src="./src/images/" alt=""></button>
+    <img class="w-screen" src="./src/images/image-about-dark.jpg" alt="">
   </div>
-  <div class="text-regular fixed left-0 top-0 w-screen h-0 overflow-y-hidden">
-    <a href="#">Home</a>
-    <a href="#">Shop</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
+  <div class="m-10">
+    <p class="font-bold tracking-[5px] mb-4">ABOUT OUR FURNITURE</p>
+  
+    <p class="text-Dark-Gray">
+      Our multifunctional collection blends design and function to suit your individual taste.
+      Make each room unique, or pick a cohesive theme that best express your interests and what
+      inspires you. Find the furniture pieces you need, from traditional to contemporary styles
+      or anything in between. Product specialists are available to help you create your dream space.
+    </p>
   </div>
 
-  Discover innovative ways to decorate
-
-  We provide unmatched quality, comfort, and style for property owners across the country. 
-  Our experts combine form and function in bringing your vision to life. Create a room in your 
-  own style with our collection and make your property a reflection of you and what you love.
-
-  Shop now
-
-  We are available all across the globe
-
-  With stores all over the world, it's easy for you to find furniture for your home or place of business. 
-  Locally, we’re in most major cities throughout the country. Find the branch nearest you using our 
-  store locator. Any questions? Don't hesitate to contact us today.
-
-  Shop now
-
-  Manufactured with the best materials
-
-  Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
-  to ensure that every product is made as perfect and as consistent as possible. With three decades of 
-  experience in this industry, we understand what customers want for their home and office.
-
-  Shop now
-
-  About our furniture
-
-  Our multifunctional collection blends design and function to suit your individual taste.
-  Make each room unique, or pick a cohesive theme that best express your interests and what
-  inspires you. Find the furniture pieces you need, from traditional to contemporary styles
-  or anything in between. Product specialists are available to help you create your dream space.
+  <div>
+    <img class="w-screen" src="./src/images/image-about-light.jpg" alt="">
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Duniel Mesa Díaz</a>.
   </div>
+  <script>
+    x = document.getElementById("drawer")
+    btn = document.getElementById("show-drawer")
+    cBtn = document.getElementById("close-drawer")
+
+    btn.onclick = function (){
+      x.style.height = "80px"
+    }
+    cBtn.onclick = function() {
+      x.style.height = "0px"
+    }
+  </script>
 </body>
 </html>
